@@ -295,7 +295,12 @@ else
 endif
 
 NETBEANS_BASIC_CLUSTER_URL = http://nbi.netbeans.org/files/documents/210/2056/
-NETBEANS_BASIC_CLUSTER_SRC_ZIP = netbeans-6.1-200805300101-basic_cluster-src.zip 
+
+if USE_ALT_NETBEANS_BASIC_CLUSTER_SRC_ZIP
+  NETBEANS_BASIC_CLUSTER_SRC_ZIP = $(ALT_NETBEANS_BASIC_CLUSTER_SRC_ZIP)
+else
+  NETBEANS_BASIC_CLUSTER_SRC_ZIP = netbeans-6.1-200805300101-basic_cluster-src.zip 
+endif
 
 NETBEANS_PROFILER_URL = http://icedtea.classpath.org/visualvm/
 
@@ -343,6 +348,8 @@ endif
 endif
 endif
 if WITH_VISUALVM
+if USE_ALT_NETBEANS_BASIC_CLUSTER_SRC_ZIP
+else
 	if ! echo "$(NETBEANS_BASIC_CLUSTER_MD5SUM) $(NETBEANS_BASIC_CLUSTER_SRC_ZIP)" \
 	  | $(MD5SUM) --check ; \
 	then \
@@ -353,7 +360,7 @@ if WITH_VISUALVM
 	$(WGET) $(NETBEANS_BASIC_CLUSTER_URL)$(NETBEANS_BASIC_CLUSTER_SRC_ZIP) \
 	  -O $(NETBEANS_BASIC_CLUSTER_SRC_ZIP) ; \
 	fi
-
+endif
 if USE_ALT_NETBEANS_PROFILER_SRC_ZIP
 else
 	if ! echo "$(NETBEANS_PROFILER_MD5SUM) $(NETBEANS_PROFILER_SRC_ZIP)" \
