@@ -247,6 +247,7 @@ WITH_OPENJDK_SRC_ZIP
 WITH_OPENJDK_SRC_DIR
 WITH_VISUALVM_SRC_ZIP
 WITH_NETBEANS_PROFILER_SRC_ZIP
+WITH_NETBEANS_BASIC_CLUSTER_SRC_ZIP
 WITH_ALT_JAR_BINARY
 AC_CHECK_WITH_CACAO
 AC_CHECK_WITH_CACAO_HOME
