@@ -1,3 +1,12 @@
+2008-10-16  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	* Makefile.am:
+	Make use of ALT_NETBEANS_BASIC_CLUSTER_SRC_ZIP.
+	* acinclude.m4:
+	Add --with-netbeans-basic-cluster-src-zip option.
+	* configure.ac:
+	Enable WITH_NETBEANS_BASIC_CLUSTER_SRC_ZIP macro.
+
 2008-10-15  Lillian Angel  <langel@redhat.com>
 
 	* Makefile.am
